--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:q35NzbNd,iv:wReBMGUGeY0Zbsu7rHp49F4lflKLkO3sm24SSWwthDU=,tag:V9viy85bgm8pPBWAu2OJWg==,type:str]
-ansible_user: ENC[AES256_GCM,data:gY7glR4G,iv:K7gZakJEWyJLL0ZvoPBvHKAOl+5RvGq5NSBkDC1V40o=,tag:Xyt+80k9ygvsxEKG8FKyEw==,type:str]
+kind: ENC[AES256_GCM,data:IEQO/FDJ,iv:wPv/HabBih8fUEIsD0DC9gFduUOMMVZnT+zj6MGYbSg=,tag:G+Qt+2MyXB9aTOEYIvY2VA==,type:str]
+ansible_user: ENC[AES256_GCM,data:OFBgWkWq,iv:cKdnJ8JYbt0Xc9rmnwJEAQdTw3bM/qULrRmK3Ty+i8c=,tag:V4ehUfSVBnVq9We8bsS/OA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArMWJqVHhkd1NlMWR3VURk
-            am42ZFlDTmFyWUlXbXF0ajlwQk1zeEZ6OGo4CjFqc25qejdJM3p5V2NGOEpkNFVn
-            d1pzYndQcGs5REhVMzUrdkV5VUF1d3cKLS0tIDVoMXhPRGZrZ200VkZLVEpnb2tV
-            Qy8vQVRsTm5CSGJiYU5Lc1pyR1FkK0UKLriEMqdz2ti9WIN5OVlOA3W/65bu0nWk
-            Z5+fFTl3AiUO+mcqilqA0XxZ+QxDoeCNA1MMntGI/mTVlDdTFScY8Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5Q1pNdnhLanpQUk1iMHda
+            OTQzNndhUWlrODRYNHlvenB4R3RLNzZuV0g0CmxEbW1nd3dRTTRGWld6MXRQeFBK
+            Y2F3QTZnaERsYkU0WWIxMk5TUE0wMEUKLS0tIGVWQ3Rzc29mdjYyMFV1Y1BoWFlm
+            VURDMzFQNjhpeFBPN3k4OE0wN0pWczgKMHibg+i+t9C+m04tYQ59xqlOWZC8XS9B
+            ovsPQhHbsZBrm0t0LFlVpZ7nd6+r1J3l5bIpiZxSo5boNe46MQzSDw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:27:08Z"
-    mac: ENC[AES256_GCM,data:on50MJnKw2okumTu5FqNKC65b307I2xup+wDGWqJWUryJ+xJQUC2K/tLyq3/1m1znkH+0ZaRvZkCJttUiB3/TQJ4zpJ80AjoCpYj6NhQ7Q8bJ3gFAc+pS7+qHj/4Wqoek5qv5PACHSNmbEvaqz3sra92vul0zu7IMhd3rYXVV+0=,iv:nkDsK/uwcghv09nC1AB1w7bNAfk9x0y0IsIYxeEIVU8=,tag:T2/Xft8iU+Cm8a2tVSCa3A==,type:str]
+    lastmodified: "2023-02-19T20:43:10Z"
+    mac: ENC[AES256_GCM,data:CmnkSrZDUawUWI4Zo3fApFXyiUO5aDqSQlSdcKW8WM44CssvH+7uFum4wK0uv2B9I7J0BfuhWNbADwGhfEeQgBshTPxfos/z6HtnMAWzCgx4F0MHBeSMdnDbM3vGtFzjydHD1d27g0kwqzo9wciH9N1PDjeZ6/B7LA0AqPnsr1Y=,iv:hhMq26fdAlRn/IBMvx0Fyi9B2mkl2CSgS3SIUABhwYA=,tag:WDUzn75ICVhVFxBVxcFCKQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
