--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:/I8PbNmj,iv:UUMK4QAjyljT0Oxz7LCL4WPOnL6TizR01rObA8HSLwM=,tag:MjNP2rxX6Bs70tk7vna1OA==,type:str]
-ansible_user: ENC[AES256_GCM,data:uhYvRCEM,iv:xmBxw0w6+Q6kVumw1g8XRLXNMd7zgpivUju5FQkofKE=,tag:4bsi1aOzP876uViCQQ5Iag==,type:str]
+kind: ENC[AES256_GCM,data:MHfmaa6y,iv:pssUsXyZz+uQIKM37/IdS790QKIlaUGZQSyBPeqR+7g=,tag:sW+Fm5wjUlkdWZnSQ2g9sA==,type:str]
+ansible_user: ENC[AES256_GCM,data:o+Oh1PtL,iv:W6dBZUz0MIHXVDrmlMQAEV5tKf0u+O0GXpkynSlrmfI=,tag:dBFgMMZsIGAWGbGNFTtcWg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlcFhpc0VXWDI5YVQxMDFY
-            MzFaTithc21uK0JVb2oxWUh0Zy9rbERxRVVZCldVQlUyZVFvcHNKVTdma3FMdmNl
-            eTVmRHRiMXMvYkxoZWlQN3l2TUE4VG8KLS0tIGxXZEJtMTNjalQxWlJLTHg2UHEz
-            OG9iUUU2VldDREZpeCt6UmRUN1dTbU0KCGC31laEuvT4zxTjcvGtNz09xTPR050c
-            USSmb8YIRklKRaUFujVJ+Zzc6njc3koQ+yYawg3TtiCeZxUwEJLcpA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxUExJQUF3a1Y2NU8vWHJw
+            Z3puS2lCNVVWLzhqd0d5QkNuMWJucVA1eGx3CnRuS0QrOS9jdkUyMTlWUEg3cFBD
+            ZEd4U29zaUd3YlBUQTErQWJkME0zNHMKLS0tIFhCRTFrdXJRaS9YZFJWazYyZVJa
+            OHlyYittS0ZQMVA2dit2NTFRUkVrN0kK0dRoK739zKoHjzO5Wpz0FkluLa0XzZB0
+            w6a6vx4/vxvbJkR3sVoUUOHOc1UocV31LMnmrVlC5LokO8Lku6ErmQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:27:08Z"
-    mac: ENC[AES256_GCM,data:iFS3rQULohLjdHP2T6BcBPJBhOPtCxzSvOXY5uvX14pPtLN2RjCxECOl0xoGExNWRUXeqsHFs5hGaoEO7L0iPODEOzQ2C5iKQ2POvzWDjiy2H+30TCwgpWoPCOVrcQokpb08iCvg77wgi3SNyLLs/iSNqZT/zR/xJZevbDiWd4E=,iv:CozyMwcwZU1+X27iVoVIgNbuvJwgit8+8YUxQf8QUN0=,tag:TkplF1M6neefFSX4mAYb6w==,type:str]
+    lastmodified: "2023-02-19T20:43:10Z"
+    mac: ENC[AES256_GCM,data:GuXaHcFWWISHMH3yvVEcEP1slnIqScXOSCgBHbzdhK3bBlRSpDwQZrYQ8B20MxQMQZyBPkm0todP3GlexYdAsBvQfsqfHiLmmpGIV5HOGwHL8ANpuB0ND7xYU2meMEJo6RBQqkz36QNZLp/jF1YTqAQAPXFEHIFLXWIiXzSxX3o=,iv:CNlNaS5iFwQo6vVD9+VVbwODPmsRSe8jddPDJNJ2Sik=,tag:HhGfNfysPEXaIdCd64pgOA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
