--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:BHomp873,iv:RIj0hEBjxj1SVcbBaHz72tqp5CFJMbLKIFFfKiufxtM=,tag:OXjJ6gDfoL+XuHHjyMm6ZA==,type:str]
-ansible_user: ENC[AES256_GCM,data:eoqr1lOQ,iv:RN+ehZ/oRdYPpE06WidkZRM5gUU6EBBoqxXkZDb9Qwg=,tag:LFi6s/CPNOkvGFKZwhvDJg==,type:str]
+kind: ENC[AES256_GCM,data:5JkPt7Gx,iv:5SyktiRNTxKfgK7aXOSGdmH122ZCV4qauwSGPEIWHAw=,tag:sRsxyR2qQZORbbZaTHaFog==,type:str]
+ansible_user: ENC[AES256_GCM,data:AS065Tl+,iv:YAfkyadvHIX2Ya/m2WWt3AglzohZiJbQ7vMMyZ+9HkI=,tag:L49AtGYmfEJVqEX65S4LfA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArNmt6bHB6Z2thWVdUQjU1
-            dU1jOG9uZkV5YlJRWDF0dFlYdnhyZVA5ZndzCk16K2E2d2s0Qit3OGpHSXBJd2lr
-            d1BhbzJ5Nm5mOTk0RUJ5Ykg1MXRMSDAKLS0tIE1FOU8yb2Z5NFFsTXFUSkFMQkVQ
-            aXlSSXFQSHlXQmo1Y0J0TmxZWXZaTUEK7kCBrDviTb3512T83P7baVUVkBxnGmbd
-            kyJdHZj7+0hgmGoDB+akdPgdlj+9sCT0AI+FsaqWiVH6LANj06K8vA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0Vlk0WkVkOWFQWW9HSDFu
+            azY2Z0djV3Fmd0JtYzhMY3oveDl4WngrV0V3ClQ3OE1scElQYUk5alBycEVGa1hw
+            WVdhb1A4c0Nzb2U3bWE4TWVHb1E3SVUKLS0tIG95eXBrNzFCdlNUMkFxNFdtclRu
+            WDMyN1BnL1AydHNaTk9McUFMSEg5bXMKcx9y4mnTheD+sjIn2OCloRpQd6lapFWa
+            famKdc+BxySIOfmT8mKK2AkunGCiPdtUtopvo6NbvrPC2VNipprN2g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:27:08Z"
-    mac: ENC[AES256_GCM,data:eCMvWlXCwT5WCMz+IvgSKnKWuaxbrlIdbYU3AIS2aARTEiGnLpWHmK+mFuhHHi3pk1jubOsMG8nIPkMcnQtWll2yzm9gubegHmEPYfUkmYtBNVXs44YWp/T1AhuG/Dj228locIr55B/id3EvKSfxYwlmSz7K27sC3k2ehq0wTxc=,iv:s7apHAXwLydS0Qwa02flVFeWOZ2RsCECz46iZpIdoVc=,tag:WV6eQH8ExF31lon95qIRAA==,type:str]
+    lastmodified: "2023-02-19T20:43:10Z"
+    mac: ENC[AES256_GCM,data:21Gj0JNORuEg1gpNBrI+TvT2GHyEpOUp3KvkfloF6yoa+QYDZrKALDtrUl09gI7Rqh509vdlUDsV3CJf3s3Asrt5nqcRvKuwSztg0yTQMpjJYbymdZ045diKeNH8SWzXjcv5aKUZtK+8q9vBxCDgANhxbaYYeYoMeV0Dwad/L8w=,iv:arNkLR1Qi5oaHornNz8giDFDdEAPIi9Dqtpy0UbkZzE=,tag:L1UVa9P+9SvDNf8CnF+87A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
