--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:EjxP6RDN,iv:KZvcPQSdkBzWc4ueSYZWBj3oXaVvU2sTgoMQvVi9j8E=,tag:hDIV5IMyhs/Y9hKb6luO+A==,type:str]
-ansible_user: ENC[AES256_GCM,data:Q77CQoLb,iv:KqXzWV4lXu2YwVwl8lxieAiR6iD73pitC/ffDFLrZbE=,tag:O+iHvCD5fbvp+ijdVlU78Q==,type:str]
+kind: ENC[AES256_GCM,data:84khQe/M,iv:T6DsEbP7RerYGwUEq9xEbKoKfDAbHjAFSRxTFycNyl0=,tag:9JosYuMpPhR07bTL5Tjaew==,type:str]
+ansible_user: ENC[AES256_GCM,data:5FIKsAGm,iv:LWOyLQLpgFnVYolAoT1v/P8Ew4JyRemrFs8HL72Perc=,tag:SVrCjFeE9u6vZejIx6v62A==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyWnhHdG10V0tCaG5mS0dJ
-            WWt4Y1Evb05UL3R6cm9MOVU5N29ONkJKMlIwCkVaQ3p6eVh4YTBhV2FJMzdJKzBw
-            NGplcnBLYno1b0thLzVwTzFpQk8xSGsKLS0tIE12Zms4UWxBYW01S01jdUM2c0tO
-            VTlzNG1CVVBiUnpvd0E3RGJTOG9HUDQKmVzIsD7ywuz5fAcY+bA0pYzjeaG2zQ6v
-            QiOa0VMEcaZmZYVYkBJHy6u9FGZfs+FhZinTCyerLKWDoxv4nMjnbQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvaGxQREVrYi92Zyt3V0Z2
+            NmNrOHprUk9WY3gxTWt1WU56VjVVZlNldDA0CkF6dUYzWHZhVU42RGJQem45U1Fk
+            bXZKNHdZTC9DemJnYUl2UWxMMmZpUzQKLS0tIFdNTmJHK0RsVjB1WlpyL2RzWGdJ
+            YVpGSlZlSEFQVERTQTVtbmYyL29aaFkKcj1ZUjc7acD2NfXvxjqFKovbOPpmS+NF
+            Gf+wGggd22x27c242hJf9cgpByR/iyB1J1lkRgOFaJfuEn1WndtPXg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:27:08Z"
-    mac: ENC[AES256_GCM,data:RlpE4PBbpf6jUU3Bx5vJSPD+QG6VRxejaUnHcmGtvzmICa41tcTUViFc3NEZTnohHBvFijj2YYkSB/A93uVQHHukocxHDg/3NOOi4i4vEZET5urb4RbJqxaktNMlv8pQyYMIF1DhNgf40qG3J22+o6WqHc7C4ujY6xhYRLFz56s=,iv:xIcd+PiTEqkvK2PrcwQerw33sxW/hGHpeeTBOlL9lf0=,tag:k/QhthCyld9cRpLmIqYQGA==,type:str]
+    lastmodified: "2023-02-19T20:43:10Z"
+    mac: ENC[AES256_GCM,data:B3YIS3c1jlQJlN+hJxUAFmw4P22zJqh59gaaVJb3jPVq0E/NsGatn6eBawaxlBC3zYuVRZ+oVMieEcH2zzjyfyLMZG/XD0tjlx3zfv2w+LPdd7qNYshC9/Tqlvdq+qPaiQ+Ku7NYuH5znupkkmOxCZjBlupKLNA9FzjynCmLYyk=,iv:lEtE2hl2EwTFlA9hkeNMogrbMH8iXB0El1HJRXoDkKo=,tag:tdgSBZDdUuPo3ptp9X/a9w==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
