--- a/ansible/inventory/kube/host_vars/k3s-07.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-07.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:mqEZxeUd,iv:/4Gvb69yxUXrRQTtI7XL094uXkjmJHCDaX9pxvcx3KA=,tag:QY8e0lL09A+8OJefl0usJg==,type:str]
-ansible_user: ENC[AES256_GCM,data:09gnfGhg,iv:XoLfs/q5H34R7tQ4I60j/we4Hf3Wl0UKXOpBQ0Fao7k=,tag:IYxZbmf0lN4WU5hoQD8fMw==,type:str]
+kind: ENC[AES256_GCM,data:N1unKDQn,iv:JbikHyZG8tgZN/NSY36OeqndBISWeSF7CIHOWOvvFVY=,tag:6AyXW2YNVvsAVQ647AvtQA==,type:str]
+ansible_user: ENC[AES256_GCM,data:tkcnvI7x,iv:78eTsg/cN/MUsMoqhTAh0slybewdEFpT9K5Cpnu6Y2w=,tag:XEHgfMQGCiHVG3SyL6UITA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1MGR2Zkt3QTF5d2lzSENE
-            RU1HT3AvODdNblR4UGtZcnhJL1JMMXJHeTFzClBHTWh5dHNRbzhmd00wekgyQWNz
-            d3VSTTI0cms2OU9KeHpsRWs0K0xveUEKLS0tIDQwZjJJczZZbGtBbDhwdG9xQmla
-            THhhaTFvVHlXMmFmNStsazN6MTAvWEEKC03gr1k8PI/fq4uOU34FzX4abtpQRtPO
-            Zvdn7hl1yrPGadrnXnwaZaPGdV+3IHiqehjBmfr9PEoylFLf4BaDlQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBSExzLzdCQlhiU2V0WE5q
+            c2kwRFFYdHovWDgyY2s3MlZmcHZBejlUT0FvCmdCKzNaMlNZVTg3TkYrcm4rZjd0
+            QVhSZVliMk9wSWhzajFrVUE3QXFVTGsKLS0tIDZhR0R1aVpKelQrN3poY25oS0xl
+            dHI2UFUxSlYyQm5Hci9FenBKZTFsU0kKzRglqKTW9oYsPGFh82WzAZD82dqQCZ0E
+            bsWXLwf5sb5RLSd4XomCawQKMzyA9/SXi43zLD1GBtxe2z2VhEvBuw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T20:47:13Z"
-    mac: ENC[AES256_GCM,data:l12d8lihEsft9wPFDbfUlslafbBwBNnj92kU/YhkzZ2hNJkRaw2YM9+cSNVAw5ptAkme5VbC26Hi5fayu916txKy9nStaHbrwiHJX7IqeRHkVz2lcd/oZLxHUTs0TAcDb2hX4EcK6RKtwOMutfzPPYDip6NvJEJdJ4j4Mpzpjy8=,iv:TZilf0f9gYRFMFEpnzKjXWsg/N2rOQJiD5yuSKL56bk=,tag:dR8R/xMBYhL3IVs+MKtvug==,type:str]
+    lastmodified: "2023-02-19T20:43:10Z"
+    mac: ENC[AES256_GCM,data:Yxe8EQpe2IlwOmWhHeUBK/vXtN6lrGDU5jSFJpPY0BTzrAf4BY8J1qrUALnwRR+blpcMytXIytdNrk8rhedW+Js3X7XSQwWEM2VMffyHf1xhk4WyrzYcLkarLhpVsq8XRescHo+26GqnQHQSCUs2U2bclVSjTX7LBtTPYo4+D4Y=,iv:me43VwShQEj9JiMeJn4B4OjWKlybJmjAwUxKGMcwN7c=,tag:0+82MFjHB3TU0F/kJqPMiw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
