--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:1n/rttgPcfDPSapgbJikvGJB36ks,iv:zs2APUV3VlD5wVoopP3+aUrujOtMJpOo2IES/Yy2Vqc=,tag:/aWvlsbGnwLPl0p0EE+Q7A==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:CLflzkyKic5lg1hkQrQLUrMrDnvwRbYFmnvnp+Zo0dzeyCCaUg==,iv:Da6wHtYtXlVy3/fEQJSgjncFaMb3qJNXsXHyoRXrCQA=,tag:Xnb3kTSkGJhpvMNDYwcK5w==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:G6+HJaSYiLRZOoM=,iv:FpH62c6almREfHheMVn0S3DiELo3pmemX4NL3R/gkSk=,tag:lMPtslKMAtGAFDeQZEIZSA==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:Y7sfVxYMJ4f1FvntSPFnC7+W6p/3,iv:9t57fUY79FgGAE99lewp7IPedYWrvlfrP2btICVRgS8=,tag:36Gpc4BGxz2aE/QIlFQJdw==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:nF3GNLvJGxnwv0+SegDGKvDZ69o8nlXFvGTZBRwMyd+r3X9X3g==,iv:kSfqPkUe6bNuY1SHmcTxO8QLSGgq2UyRAURdwtaM7Y4=,tag:kPRRhuMMfKoLUpLwA6YaXg==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:WMjyzjC8hkbH9zY=,iv:zYVDRU2Qundkf9nwEbwVde7I5oQ8zJ5Rw4eWFmpr8SE=,tag:I+cArHG6KuQntqPOqXJ+rA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLdjNHclJ5d0kxQ3JkU0p0
-            N2xwdlJFQTJibmRCN3ZLTU0zVGFsNDR3YlUwCmcrVTF5VWo1eHM2M2xRZGVxc0F1
-            L2NhQTdnQ1MrMlZjaWdtQ0R4YlU2bGMKLS0tIEkvTzIrZ0dob3pOM3FERkJRbE1q
-            aDRRMWI5Sng1MkZSZzlBd3VYbGJXN3cKgJA36gpjHoYta+b/vYvds92xzs1wpYEg
-            EVRAQ4DYr0tJ8Rb/259sj1we9HLQZgTajDze1+WUQaw2IHTMRtIn7w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOL1VneHlQVHZJak1FZS81
+            RDQ5RGthejg5b2dqRUNxS3dONmhSWExadGowClhKQ2xhRjM2azF4djE2UE1ydkhw
+            a3U0MGRwUUZPUzg4aXN3cGl5QXNkbWMKLS0tICtjMEdrM3pEaWFpakVXbWd6N0Fl
+            cS9YOG5vSm1XYXVyb0pTSDVnQW5OeHMKWz/cIomHazFndmyzHkj0R7ATVgOo6zWq
+            jNeJvzgF5rfy3ExrxVLaCGo9Rkm1RDdRmgPOGDnxYN/sChAd3EofuA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:27:08Z"
-    mac: ENC[AES256_GCM,data:9AdjD0GlnyeAHaBZw9CE5pTLmYDEilPRJzqCxmyxROrFvIjG4r+qGeQ9J6hrlfePXRJX4gVg0fvAF2+iDruoP4Tzcgmi6ySJWJchY07A5Y7mzmCwuv+YcC+IaFeFn/noyb8VWJaxUavUmG+PkxXkDuakxp6MrFcw0dsY7Xl/+/A=,iv:XJRlUv6PUVB11ACLVXJT66rosCGCfTEQ1RBmy9y/aSE=,tag:xvE11GDLMdT/xZhbjYhrVA==,type:str]
+    lastmodified: "2023-02-19T20:43:10Z"
+    mac: ENC[AES256_GCM,data:yMxNPXcp8t6Zz4GIRLqN1FyG0gtZSU9Vo6dnJuracUU+EiAzMzTj4ldAjET6C5jC983J1gAhQQ0raLIJ7qU2XAqt0qFE1eaJQ8PWv4b72sVWlXCk/Tq3mosgfJnXt4891ld7VEf9mzoGYFuLIWtctirotuK9LpUT8l1t+0U76IE=,iv:M84iu7VKHv7mjN4n7/jTJaC0jdfEtJDo4f+SdQRxy9o=,tag:bSC7m1OdOvpo4qc1+LoLJg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
