--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,27 +4,27 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:AReoMYhF0sGytf0=,iv:s3LbY6/YmVPJH5ZYepSM7oWg3KjvclOFUbpqd/Vohc4=,tag:K5698OPV5qRoFOzVStUYhg==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:GWocjR2uK/6+4Mglf1c0NmOGVMFp,iv:Y6jyroDFVDVWAXW8AyjwanwPflEeX7NaEJ2xfPDnuI0=,tag:xowJ+Y53+cmtRUXJfmMYqg==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:fxvq3Q85SdRK0wMjNLBemYeLsW1gOheBngFHv32VPJ5Ow22Ocxtt3uK5h6yzEYD/UdVXFWUpr93ijwdkZ50gN05Hvjbhc+k=,iv:p2t1LRaxdovca8N3v1CHZ50qRP7JNmMsP1K9LQPiqac=,tag:YSvpNnJk9PtHb6D4FTIWkQ==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:NtWTOOcbZrizk4Am3EANhFM1Lbc2QduMq7AuaXnLAiWxkLo=,iv:2ssMTDLoj+UUb0Jm0EGu10fyDuzNjlWOsOJPkZ6Nfj0=,tag:wF+clsU/7ZA+0RDksYRIMQ==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:yTZpbIPakxGJx3mFyALZiAdj5w==,iv:bugqu4AC7J62ZC+IsKCf9Kz5FXdgylv9ps5uTWSKlNE=,tag:DstzWzAHyN4W/8A266KWIw==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:XlX8PWfazD/O1u6G805EfFNAGTLg,iv:1mCdliLJOaUp5YEMOePUNmQfWgCndk8N+1CA3G9gR5Q=,tag:WieWFPbt0aTGHLq3cERM2Q==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:y83/e9crc6Q=,iv:tZ5LQfJuPNuRgM/ZC/ErRXqS4KdC2yhBjxL2m3Gmp80=,tag:4t+oWgjd8A4sfl7SpPq2Gw==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:1DrVNwm5cwY=,iv:V9k802EwfFGG5U7tjRVG8lQqqX7RlmT4ZgdPC6QY9a4=,tag:o0svbm0e3X7wVMM+Qb8Fkg==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:Fvzo9pUAP5bYbO5R4ePCrQaLMmYextmXxVp6BMZ54MavVd4Nv/JgLwFnlkw4QMHqUagSR/U7o8wo4RWG1XYuaA==,iv:eIxn6orMD6pVpb5pMrHLgxdSjc7w3cMr5pqbZo15FzA=,tag:Ktp/VSkwtN7ELNww0z753A==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:SXYX6HtjPc6ZIdfit41MG2vG02waY2phuJUWk4OxMp1nhj8916BjgovK4OotVG/8/Gm2ssPxq2Kbk2qAlXHrew==,iv:F6YJdFFPbEkWtq2T0POQBjrDoCbh6xjDnzKYvZNiZRw=,tag:1rMNknXo0WG3lce8t3mLtw==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:jYQUyxlIJ9DY,iv:f/KV0DSx4+MflHjx66wxFOY4EH144BZweFkT3n0Fosg=,tag:f4iNmDbVZhIfCixbBKjdhA==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:J/JWF/sxnL92BHAD0QeB,iv:DW6aq4M6THT6gjr6Dz/SX61kUfcaYURn5eqRdAymHuY=,tag:ji3S9OCQoiaxWiY+MgPJ4A==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:JXRHpvHJaAkMnjQEmkW9A/FXp47GN8SM2SPsu0f72BgNp9I6WE/w/pSKo+X237TRF3w=,iv:/r4UwtsewR3T6XcHS9q/pM6BRXZqeRijHiw/qUnCFM0=,tag:AdPAgqnlLitF4YwjlTuL9A==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:evm6FgHPCR2fLCoxYb8=,iv:xvqNpfd0mIo+mvY2bql2LAB1ftXNO7F9teXFx/2KOog=,tag:HLdw5FG8fyGt0vvgkqmLwA==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:JZ6elvMoke6NFWfyzMGh1TqBObc=,iv:n11kPcWgctWj9Ezm+9g7ZDvZI3oPdCuOw5WUbwqertE=,tag:mXRssFbn8hpoc5ikJCS34w==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:YIxonCJIOqQ=,iv:T+Nj0QZw9oPGE3EeYZIeVH9ApV9xrVbsjHZS/72GNfY=,tag:tCSTsar/ELJQn8vaFo98og==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:Wyz6QxxKODeEiVg1rx/hpEH6n1YW4CFBpXVJ1DCGTCCRGhpO/w==,iv:v0vwnreiQG8HeoxfwFLw5y/mweQN5+y89Y8o7+Ryksk=,tag:ZknoK1Wg2irpgGok2FLSRA==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:GqnXxal0Dlnq,iv:kpvNQAZSND7DdpyccIAlwW4IfCvh6Ss/ndZ5fIrXtIQ=,tag:0DikDyZAFp+u7KRqtxtD9A==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:8kL9AbrW7Leb,iv:WU5LiFWY1L9slcDubKh+h90xvLGi3AGRqdRzU3nb8XU=,tag:Bz3nWCNy1MqvV/efr936/w==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:AsZh7kkufQ==,iv:F6nWuGG04af5pz49yMuw5UHfsT8Y/vJQ/k6rhIDkZB0=,tag:OHcGUQJU4Z0JWufyod5Mzg==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:8TRqQdggU4f5,iv:ULdSXDSNvRcPemx2sarC+m7Av5lDbGHogWq2fU0vnbI=,tag:U5HfXU1eiyHTPanNX59Kjg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:T4eGRD0zx8+8CYk=,iv:aOxYEBQ0ntH1dE2aN8uzybx7crtEwftzkWWcuYyMedc=,tag:LzU2XSAvKXL7KG9COOjjTw==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:zPUyjK3wP5oudidsxmyDtIHUHxD3,iv:IQBSDjNXWKfNOtQXMsSuWksqCn7220nz8op8RyP3TZM=,tag:A/6f4yfII+mfjkY1xfEZAQ==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:GxJVN5tHNBeOnCq8c1hPXkzRR4B2E6N8KPkrETcEdfGacL+5RPRP90jjs34lQGckrztWOzwFJAQmx0mdIqZ41b2Cwn1xBo4=,iv:NYK6Q2Kel+8ZMIF27ZsJNtnsqijyXFrM1Ec6l7nDyB0=,tag:GDXn0KLUbQVfTjbg7f4Hzg==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:CvDHvMsdmzNOtvPnQRK6P1RmDPqHNENOEMizzQ5hpnQGMwg=,iv:NwFlX1rpoDJZQba54PvJPuMIqw7BNS1FIg3aA1Bu5+U=,tag:SQ7s9P7NYudnrI0/UxGkyw==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:AtF4MMszIiqo4wl7Azt8RLSXSg==,iv:4J9xw7BrPuw/85szOC8c0v1lAaEZlb62hRfl4Da2Nqk=,tag:BgqLGhpOrN1iXiMD0GbNnA==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:uHZV3pjFeZpK4WyWc57V75M3FeYC,iv:q6McVvDnTpEnwjmBcFC69LjRO0ckgU5IIbeRw9DA4EU=,tag:5ZOJ+PS9UTKmh1sLqCpbiQ==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:CFnR3Fdadxw=,iv:XGd0TXr0a86/cDZr+08LF+YrjoqcoZxOU25kdS2q7Vo=,tag:JP0R8fkdzCHgYFBDuJjT7A==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:YQ/T3/t/5QI=,iv:35KSGlUHZQafrqxkMV4mlu2j2LDfQX9IQFyxWaSi+wE=,tag:mLkYoGO4Ddvt4NGRHUn2ig==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:7nf88jWRG3nvyXGa1sn6iOSFrdnxruJgS2Jh6fV35ouX4Ll/GYHvTHvHA2NwP0k32gqh5OhJ+OjeABes1C+sGA==,iv:iS3qziBSQwv8jy3yQy+L0anC8nwhF7IDcpMlrgFVUzQ=,tag:oUI7sv65ysXHHi8vOjpf7Q==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:I4KqpxzKO1ccpJ93Ze6V4h2/comd/0gZ6y9Hw5K0ictuhCxhmH18Bmz/ZQxNlU9IyNPXPz7uMuSoeM+LGLaSBg==,iv:4cziUjQ0jf9tZYP8oIrHnvVjAMeSt0li1teD9SRDnVo=,tag:IkmMd8Afd17TqmPR9+pusg==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:gj/qJskPiFUt,iv:43zZoJCUcqtOxl6C8qPhgS/z5b3dZkTbNAw9tqGNez4=,tag:yCaj0GoHTKX5LFzixwCFXQ==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:grO4qZ+eT9Gu8KKGVi/1,iv:gqDLF70K3OtHIagVZPE6XGp1HFJO7JLRAeH0N2ys99c=,tag:RtQgIXrosQGtnOQeoN2ONA==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:ZJmqRFR1+r/TaHjancHBiNmSiYZod+FBAa4wGLXedNlQFxd0B8eRYkgYCSjh4WdXaBY=,iv:FwGuB8uP+p4Yy7Nzm+GaVu2LiOhkQkdmMBttJtQJSVw=,tag:LL+QXWyDtso4fEy4zC2l7Q==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:gVgnZtYAipgELf+hmi4=,iv:5SJ/MHmr3OFP+/8EbDvEsr43DxkExjNjTg87O/O3uWo=,tag:iFJa1R/BAHpEkitEbZe7oA==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:pNVrHROFn88K2FvC68o7LpTLfbA=,iv:NcCMNIIHUvlz8ZkMxrEfOwrsSuIMiNsjcqJYUWi5Bd4=,tag:Z9BjlEgQ9IW+k8XGlFuz8g==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:LplX5/fLprg=,iv:8cAbtP6+Y/gczd9Du73rPpk4RZ5qSvRPYXcVf5QkM/M=,tag:6Z9UCSbtoyNH5zDIf+F4UA==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:Vk+Vj7nIeoMiJ8vCBN6oe3pZmcnQI34UWnA2+F84O74TkPYtDw==,iv:NKuP89S2mEfp2od8qqLEwW940a1IS2g8mbFpykoQhTY=,tag:nQsMrBJaEEGQ0OA6RvoKfg==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:HDD79M1yBiyr,iv:cTAz1hHHOiSJXKw0G8DMrGh7SlBNHVP7nCPkep72lvQ=,tag:UqzCK7/4ICLQDmxhO/R8HQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:BCJSKfour6iA,iv:OREgFUIsL6a3ac9keKAMbSWyuvHQ9e/yHsZgJvzv4NA=,tag:y58F6KlAhv15vLaMUMuNmw==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:S4MiYuuhcw==,iv:2Bzd56GCFIVPJcu6R8dATCgBDt0aciSVIq2eM6VKYDg=,tag:kWfk230cM9N4Zc+kBdQ+2A==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:0T3AsaJafUJs,iv:1gSzixNCy21fFstWCWjqgMFVjXX7iTxSVQNKEmgN8k0=,tag:9FNMWD9Wx1zIcEhE9wRVRQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -34,14 +34,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhenVGTUI4RWZtMkd4b04x
-            RGt0bC9OcmFTK0xDcmZxbkh2V3FmbGF5UUVvCkpYVkk2MENZWlpzOUgvQzRBbHpp
-            SkRjdWRGNStMY1BSM0VKWG96YUxXMzAKLS0tIGEzWjRnZWt1TnlDekF4ei9WK1gy
-            TlJpemVaaE9WVWdjWXNSbVJlcFVGTUUKveDMwDFJnP9O6Aeb6CcVRj62H7UstRRa
-            REjtjc73Dg+6XMJ2JexyLzo+j8SDVove1xZLdHQNUNEi4ghide6gwQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGbGRQa2lyNlVoR01rbHJZ
+            dTNWcVFOS2FLTm1Ud1l6QVdaL2dpejQ5ZzNjClN0cGh4QzZjL05wSG9LcWNkWDVl
+            NEI2bmI1N2h6NzJtN215THQvUkNkV1UKLS0tIFcyTHl2ZnowcDVnSWJESHpvbGN1
+            MUI0bTlIOEVnZmVCTjFTam5oWk9GL0kK6NibCpr1RmGp/uIZ94RXoJLBG79mQ+up
+            ORysYt7ghpM3koTWzzw1AZ88KcKSKUWWtGysUljpewGLg/4n+KXD6A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:27:08Z"
-    mac: ENC[AES256_GCM,data:PzqzV2zyN9/oVFVK/F2Cq7eQzglYCgcaVmDZEHOn86yhA2tZrvR5FJ1SGVEJfu1DIYwOCIxfJHQP5L02DUw72L+MXZGBZGr+5NOFv51AFu1zgaoVOgf5RIVmxOIXWDlT7/3Hwc8ZZjTaVAoP0oOVkYL3RlxWtrY7U8BFKOj0c+M=,iv:wE142rpmKVuCk8GU6irXJ0JhnaMSBX3yb2NoPr5ZbvU=,tag:FXib4H4v1/dm7EuflYSraQ==,type:str]
+    lastmodified: "2023-02-19T20:43:10Z"
+    mac: ENC[AES256_GCM,data:DdWAYdYsZfxmOWmomjfElaEmaWJXL554t51HP6qokCK7BztShDSjX7g/WUUI0Ovrfetpd6/OsUIdjpW08VfUJwl43Xgh5H0LiZ/Z0AZ/WI3mQdVhIHzZ0g6/NeJ6LAubUDUYLX+rX+3QQD3srnlyvaja663ak6YfyblpUNarLL4=,iv:30gWj7sqytxHl5myp0XBvFW96DHmzGs2LFBc2EE72ps=,tag:he+s9r7t35qA4oZh1N9ydg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
