--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:Ar1YLI6v,iv:d8OAP6GOliKrIgPFLY0ibvtXotllDHd0KPiYbumoBhM=,tag:ATMOe/uH77W88bJ20rKHBQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:9d8eXhf5,iv:waM9pvpzfHbVnT3q9FKAla1Bo3dzAWsFsUE2NAUYr/s=,tag:PeJ2+xRCpJJwHCaY6yPCng==,type:str]
+kind: ENC[AES256_GCM,data:Rd0AcA0K,iv:fDJ7QT+w+ijV8nXNBnPPipbu3oEt34G6dDx/RDF63Q8=,tag:JW6g5NrdqmW+rzb8PUeVGA==,type:str]
+ansible_user: ENC[AES256_GCM,data:3PjQbMsZ,iv:JZXcPI2HyMF0r90mpVR1FWhj3wab9en3LTRwbO6/Wi0=,tag:pXo6XEaawjyqoVdSIxuEuA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6dEdGMk5NVk12ZFJ4NVJw
-            dmRsb1htUmFTM3pUNUdMaDZjTEttYVhWeUVjCnY2Y1Fqc1BsclRSVnZiWVlWOElq
-            R3hueXNDKzlHME0vOXY5Tzl0Zmx3RDgKLS0tIC83Rm0rcmEwRCtsZ2wzUEVXOVoy
-            U1Y0RGxMaEYwLzlraW9HWFZjZ3h6c2MKJ4aDAuWzqbp/yms0MoyWgPjDAX9Rajth
-            /J037QAJwihL1SfcC49r4nCjOXA7Pzr2mzON88HWSfc4+6gd1STYFg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsRlFqSzFYbXBsL3Uwc3o3
+            cFc4MTZidVJZUWxlWTU0OHpIM2szN2V4dENFCmExc0NHYVkzbEFpY3ZTWnlsejVa
+            bFE1RXlMRG1hY1hkazgzV285M1htRFUKLS0tIDQ3WGUrMGFLbHA1Y2p4OGFTM2pz
+            Nk9EV1BBcHBQVlNvMlR2Mmo5ZUpnbXcK27JH1EEm//YL/rM7WLL8EKLTUdyTsFm7
+            Qi8LMqKqmDbJ1RKtyvAevHQgFUD6CfDK+PXpZXfAAyOMWbgtmzBYkw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:27:08Z"
-    mac: ENC[AES256_GCM,data:ZoRcFlKWX6qoDpYcKgn74pzLeys8mwtvhauSv4SluJkywbHT99dL0giunmdJVqgzMxWvfHchUBB2mnVbiIvEKS5rSqSq/+Vzkm0WyWOmlo2Ij1tpb9UfwIm/4ppEhvdN3Z5f7tg+/qVadFoqKGUvBK/6Qv+FydhwrQOijXFv04E=,iv:p7YN+/joBeLk2QktOyDSaEx80wtL06zUVsOg8C7FZ5o=,tag:xprksB3fKppvNn85PMBzmg==,type:str]
+    lastmodified: "2023-02-19T20:43:10Z"
+    mac: ENC[AES256_GCM,data:47yAOQ8ypndgYQucWmD/0gTURh4l2A3Ng1gafKTE9u1oGJecD520CPhBGYnwyXiO6gjhyME8eA6WimKdAibkoC7HIHyOUDAb6kt/2syNUMsFudzBN68MoLnXcsl8OPZoXPyaIzFmxUBVEpFgufDZs4MWxflznO3Yb27ImN8VMhU=,iv:qaFSGHwhf6quto/wQ8jOBCjPb8Ih1TUidJWaPQAURuY=,tag:Pky9u4QQ1gkGNkLMAvLqKA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
